--- a/src/app/table-client/table-client.component.html
+++ b/src/app/table-client/table-client.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z8">
-  <table mat-table class="full-width-table" matSort aria-label="Elements">
+  <table mat-table class="full-width-table" matSort aria-label="Elements" (matSortChange)="sortChange($event)">
     <!-- Id Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
@@ -8,13 +8,13 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="nom">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nom</th>
       <td mat-cell *matCellDef="let row">{{row.nom}}</td>
     </ng-container>
 
     <!-- Prenom Column -->
     <ng-container matColumnDef="prenom">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Prenom</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Prénom</th>
       <td mat-cell *matCellDef="let row">{{row.prenom}}</td>
     </ng-container>
 
@@ -22,10 +22,8 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator #paginator
-      [length]="dataSource?.data.length"
-      [pageIndex]="0"
-      [pageSize]="50"
-      [pageSizeOptions]="[25, 50, 100, 250]">
+
+  <mat-paginator #paginator [length]="dataSource?.data.content.length" [pageIndex]="0" [pageSize]="10"
+    [pageSizeOptions]="[5, 10, 20, 250]" (page)="pageChange($event)">
   </mat-paginator>
 </div>
